<resources>
    <string name="app_name">Sach</string>
    <string name="rotate_board">Rotate Board</string>
    <string name="play">Play</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="rotate_pieces">Rotate Pieces</string>
    <string name="play_chess">Play Chess</string>
    <string name="play_checkers">Play Checkers</string>
    <string name="delete">Delete</string>
    <string name="previous_move">Previous Move</string>
    <string name="next_move">Next Move</string>
    <string name="enable_timer">Enable Timer</string>
    <string name="white_time">White Time (minutes)</string>
    <string name="black_time">Black Time (minutes)</string>
    <string name="_10">10</string>
</resources>