<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/rotateBoardSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_board" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/rotatePiecesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_pieces" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/timerEnabledSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_timer"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_time"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/whiteTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/_10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black_time"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/blackTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/_10"/>

</LinearLayout>